Make help link always visible, fix accessibility

--- a/webapp/channels/src/components/advanced_text_editor/help_button/help_button.scss
+++ b/webapp/channels/src/components/advanced_text_editor/help_button/help_button.scss
@@ -23,6 +23,12 @@
         &:focus {
             outline: none;
         }
+
+        &:focus-visible {
+            outline: 2px solid var(--button-bg);
+            outline-offset: 2px;
+            border-radius: 2px;
+        }
     }
 }
 
